--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    h1{color:red, font-size:12px;}
+   {color:red}
     <title>Trey</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
