--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-   {color:red}
+   color: red;
     <title>Trey</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
