--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
-<!Doctype html>
-
+<!DOCTYPE html>
 <html>
-  <head>
-   color: red;
-    <title>Trey</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
+<head>
+<style>
+body {
+    background-color: lightblue;
+}
 
-  <body>
-  
-  <h1>TCG Treyster509's Website!</h1>
-  
-  <img src="img/uncledrew.jpeg">
-  
-  </body>
+h1 {
+    color: white;
+    text-align: center;
+}
 
+p {
+    font-family: verdana;
+    font-size: 20px;
+}
+</style>
+</head>
+<body>
 
+<h1>My First CSS Example</h1>
+<p>This is a paragraph.</p>
+ <img src="img/uncledrew.jpeg">
+</body>
 </html>
-
