--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-<style>
-body {
-    background-color: lightblue;
-}
 
-h1 {
-    color: white;
-    text-align: center;
-}
-
-p {
-    font-family: verdana;
-    font-size: 20px;
-}
-</style>
-</head>
-<body>
-
-
-<p>This is a paragraph.</p>
- <img src="img/uncledrew.jpeg">
-</body>
 </html>
+<title> TCG Treyster509's Website
+<head>    
+</html>
+<head>        
+</head>
+<style>            
+</style>    
+<body>    
+</body>
