--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 </html>
-<title> TCG Treyster509's Website
+<title>
+TCG Treyster509's Website
+</title>
 <head>    
 </html>
 <head>        
