--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-
-</html>
+<html>
+<h1> TCG Treyster509 </h1>
+<body>
+</body>
 <title>
 TCG Treyster509's Website
 </title>
@@ -10,5 +12,3 @@ TCG Treyster509's Website
 </head>
 <style>            
 </style>    
-<body>    
-</body>
