--- a/index.html
+++ b/index.html
@@ -4,6 +4,45 @@
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style type="text/css">
+   body {
+       margin:0; padding:0;
+   }
+   html, body, #bg {
+       height:100%;
+       width:100%;
+   }
+   #bg {
+       position: fixed;
+       left:0;
+       right:0;
+       bottom:0;
+       top:0;
+       overflow:hidden;
+       z-index:-1;
+   }
+   #bg img {
+       width:100%;
+       min-width:100%;
+       min-height:100%;
+   }
+   #content {
+       z-index:-1;
+   }
+</style>
+
+
+<body>
+<div id="bg">
+   <img style="display:block;" src="img/t1.jpg">
+</div>
+<div id="content">
+ 
+</div>
+</body>
+
+
 <style>
 body {
   margin: 0;
