--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
 <div id="bg">
-   <img style="display:block;" src="img/t1.jpg">
+   <img style="display:block;" src="https://raw.githubusercontent.com/Treyster509v2/Treyster509v2.github.io/master/img/t1.jpg">
 </div>
 <div id="content">
  
