--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@ body {
     </button>
     <div class="dropdown-content">
       <a href="https://vrv.co/">VRV</a>
-      <a href="https://www.cartooncrazy.tv/anime/dragon-ball/">DragonBall</a>
-      <a href="https://www.cartooncrazy.tv/anime/one-punch-man/">OnePunchMan</a>
-      <a href="https://www.cartooncrazy.tv/anime/cowboy-bebop/">Cowboy Bebop</a>
+      <a href=
+      <a href=
+      <a href=
     </div>
   </div> 
 </div>
