--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>TCG Treyster509's Website</title>
-
+<title>TCG Website</title>
+<center>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -35,10 +35,9 @@
 
 <body>
 <div id="bg">
-   <img style="display:block;" src="https://raw.githubusercontent.com/Treyster509v2/Treyster509v2.github.io/master/img/t1.jpg">
 </div>
 <div id="content">
- 
+
 </div>
 </body>
 
@@ -51,12 +50,12 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #9900d1;
+  background-color: black;
 }
 
 .topnav a {
   float: left;
-  color: #7fff00;
+  color: #ff0000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -64,13 +63,14 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #7fff00;
-  color: black;
+  background-color:;
+  color: red;
 }
 
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #ee82ee;
   color: white;
+
 }
 
 .navbar {
@@ -94,10 +94,10 @@ body {
 }
 
 .dropdown .dropbtn {
-    font-size: 16px;    
+    font-size: 16px;
     border: none;
     outline: none;
-    color: white;
+    color: red;
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
@@ -137,56 +137,23 @@ body {
 </head>
 <body>
 <div class="topnav">
-	<a href="https://treyster509v2.github.io/">Home</a>
-  <div class="dropdown">
-    <button class="dropbtn">Marty Robbins 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="https://noahmcge.github.io/martyrobbins.html">Page</a>
-		<audio src="audio/elpaso.mp3" controls preload></audio><ins><b><abbr title="The 1959 Recorded Hit Song by Marty Robbins"> El Paso</abbr></b></ins>
-    </div>
-  </div> 
-  <div class="dropdown">
-    <button class="dropbtn">Johnny Cash 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="https://noahmcge.github.io/cash.html">Page</a>
-		<audio src="audio/cash/homeblues.mp3" controls preload></audio><ins><b>Home of the Blues</b></ins>
-    </div>
-  </div> 
-  <div class="dropdown">
-    <button class="dropbtn">Waylon Jennings 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="https://noahmcge.github.io/waylon.html">Page</a>
-		<audio src="audio/waylon/Theme from  The Dukes of Hazzard  (Good Ol' Boys).mp3" controls preload></audio><ins><b><abbr title="Amazing song">Good Ol' Boys</abbr></b></ins>
-    </div>
-  </div> 
-  <a class="active" href="https://noahmcge.github.io/spanishproject.html">Spanish Project</a>
-  <a href="https://noahmcge.github.io/page3.html">Testing "yikes.com"</a>
-  <a href="https://noahmcge.github.io/page2.html">Testing "loltyler1"</a>
-  <div class="dropdown">
-    <button class="dropbtn">Anime 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="https://vrv.co/">VRV</a>
-      <a href="https://www.cartooncrazy.tv/anime/dragon-ball/">DragonBall</a>
-      <a href="https://www.cartooncrazy.tv/anime/one-punch-man/">OnePunchMan</a>
-      <a href="https://www.cartooncrazy.tv/anime/cowboy-bebop/">Cowboy Bebop</a>
-    </div>
-  </div> 
+	<a class="active" href="https://treyster509v2.github.io/">Home</a>
+  <a href="https://treyster509v2.github.io/">Shirts</a>
+  <a href="https://treyster509v2.github.io/">Hoodies</a>
+  <a href="https://treyster509v2.github.io/">Backpacks</a>
+  <a href="https://www.twitch.tv/treyster509">LiveStream</a>
+  <a href="https://treyster509v2.github.io/">Customer Service</a>
 </div>
 
 
 
+
+<h1><font color="red">Welcome TCG </font></h1>
+
+
 <body>
-	<center><h1> <b>TCG</b> Treyster509</h1></center>
-	
+
 </body>
 
-	
+
 </html>
