--- a/index.html
+++ b/index.html
@@ -33,13 +33,58 @@
 </style>
 
 
-<body>
-<div id="bg">
-</div>
-<div id="content">
 
-</div>
-</body>
+<!--Background cssstart-->
+<style>
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: Arial;
+    font-size: 17px;
+}
+a {
+	font-weight: bold;
+	font-size: 20px;
+}
+
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
+}
+
+.content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+}
+
+#myBtn {
+    width: 200px;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+}
+
+#myBtn:hover {
+    background: #ddd;
+    color: black;
+}
+</style>
+	<!--Background css end-->
+
 
 
 <style>
@@ -63,7 +108,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color:;
+  background-color:pink;
   color: red;
 }
 
@@ -94,9 +139,9 @@ body {
 }
 
 .dropdown .dropbtn {
-    font-size: 16px;
+    font-size: 18px;
     border: none;
-    outline: none;
+    outline: red;
     color: red;
     padding: 14px 16px;
     background-color: inherit;
@@ -105,13 +150,13 @@ body {
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: pink;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #7fff00;
+    background-color: red;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -127,7 +172,7 @@ body {
 }
 
 .dropdown-content a:hover {
-    background-color: #7fff00;
+    background-color:pink;
 }
 
 .dropdown:hover .dropdown-content {
@@ -136,22 +181,48 @@ body {
 </style>
 </head>
 <body>
+
+
+  <!--Background start-->
+  <video autoplay muted loop id="myVideo">
+    <source src="https://Treyster509v2.github.io/video/mvbg.mp4" type="video/mp4" style= z-index: -1;>
+    Your browser does not support HTML5 video.
+  </video>
+
+  <script>
+  var video = document.getElementById("myVideo");
+  var btn = document.getElementById("myBtn");
+
+  function myFunction() {
+    if (video.paused) {
+      video.play();
+      btn.innerHTML = "Pause";
+    } else {
+      video.pause();
+      btn.innerHTML = "Play";
+    }
+  }
+  </script>
+  <!--Background end-->
+
+
+  <!--Navigation Bar start-->
 <div class="topnav">
 	<a class="active" href="https://treyster509v2.github.io/">Home</a>
   <a href="https://treyster509v2.github.io/">Shirts</a>
   <a href="https://treyster509v2.github.io/">Hoodies</a>
   <a href="https://treyster509v2.github.io/">Backpacks</a>
   <a href="https://www.twitch.tv/treyster509">LiveStream</a>
+  <a href="https://noahmcge.github.io/#">Noah's GitHub</a>
   <a href="https://treyster509v2.github.io/">Customer Service</a>
 </div>
+<!--Navigation Bar End-->
+
+<h1><font color="black">Welcome TCG </font></h1>
 
 
 
 
-<h1><font color="red">Welcome TCG </font></h1>
-
-
-<body>
 
 </body>
 
