--- a/service.html
+++ b/service.html
@@ -1,37 +1,8 @@
 <!DOCTYPE html>
 <html>
-<title>TCG Website</title>
-<center>
 <head>
+<title>TCG Website</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <style type="text/css">
-   body {
-       margin:0; padding:0;
-   }
-   html, body, #bg {
-       height:100%;
-       width:100%;
-   }
-   #bg {
-       position: fixed;
-       left:0;
-       right:0;
-       bottom:0;
-       top:0;
-       overflow:hidden;
-       z-index:-1;
-   }
-   #bg img {
-       width:100%;
-       min-width:100%;
-       min-height:100%;
-   }
-   #content {
-       z-index:-1;
-   }
-</style>
-
 
 
 <!--Background cssstart-->
@@ -180,13 +151,14 @@ body {
 }
 </style>
 <!--NAVBAR end-->
+
 </head>
-<body>
 
-
-  <!--Background start-->
+	<body>
+		
+		 <!--Background start-->
   <video autoplay muted loop id="myVideo">
-    <source src="https://Treyster509v2.github.io/video/mvbg.mp4" type="video/mp4" style= z-index: -1;>
+    <source src="https://noahmcge.github.io/paper/Anime-United-States-Of-Smash-Live-Wallpaper.mp4" type="video/mp4" style= z-index: -1;>
     Your browser does not support HTML5 video.
   </video>
 
@@ -205,27 +177,29 @@ body {
   }
   </script>
   <!--Background end-->
-
-
-  <!--Navigation Bar start-->
+		
+	
+	  <!--Navigation Bar start-->
 <div class="topnav">
-	<a class="active" href="https://treyster509v2.github.io/">Home</a>
+  <a href="https://treyster509v2.github.io/">Home</a>
   <a href="shirts.html">Shirts</a>
   <a href="hoodie.html">Hoodies</a>
   <a href="backpack.html">Backpacks</a>
   <a href="https://www.twitch.tv/treyster509">LiveStream</a>
   <a href="https://noahmcge.github.io/#">Noah's GitHub</a>
-  <a href="service.html">Customer Service</a>
+  <a class="active" href="service.html">Customer Service</a>
 </div>
 <!--Navigation Bar End-->
 
-<h1><font color="black">Welcome TCG </font></h1>
+<h1><center><font color="red">Welcome TCG - Customer Service</font></center></h1>
+	
+	
+	
+	
+	
+	</body>
 
 
-
-
-
-</body>
 
 
 </html>
