--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@ body {
 </head>
 <body>
 
-
   <!--Background start-->
   <video autoplay muted loop id="myVideo">
     <source src="https://Treyster509v2.github.io/video/mvbg.mp4" type="video/mp4" style= z-index: -1;>
@@ -219,6 +218,7 @@ body {
 </div>
 <!--Navigation Bar End-->
 
+<embed name="backgroundmusic" src="music/halloween_quiz_bg.mp3" loop="true" hidden="true" autostart="true">
 <h1><font color="black">Welcome TCG </font></h1>
 
 
