--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <center>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+
     <style type="text/css">
    body {
        margin:0; padding:0;
@@ -215,6 +215,7 @@ body {
   <a href="https://www.twitch.tv/treyster509">LiveStream</a>
   <a href="https://noahmcge.github.io/#">Noah's GitHub</a>
   <a href="service.html">Customer Service</a>
+  <a href="computerparts.html" target = "_blank" Grid Example </a>
 </div>
 <!--Navigation Bar End-->
 
