--- a/computerparts.html
+++ b/computerparts.html
@@ -38,7 +38,7 @@ $1000 Computer
 $180 - MB  MSI - X470 GAMING PRO CARBON ATX AM4 Motherboard
 $150 - CPU  AMD - Ryzen 5 1600 3.2 GHz 6-Core Processor $149.89
 $228 -  Harddrve  	Samsung - 970 Evo 1 TB M.2-2280 Solid State Drive
-$145 - Harddrive Western Digital - Blue 1 TB M.2-2280 Solid State Drive
+$43  - WD Blue 1TB Desktop Hard Disk Drive - 7200 RPM SATA 6Gb/s 64MB Cache 3.5 Inch - WD10EZEX 
 $100 - Power supply Corsair - RMx (2018) 850 W 80+ Gold Certified Fully-Modular ATX Power Supply
 $128 RAM - Corsair - Vengeance LPX 16 GB (2 x 8 GB) DDR4-2666 Memory
 $65 CASE -  	NZXT - H500 (White) ATX Mid Tower Case
