--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@ body {
   <a href="https://www.twitch.tv/treyster509">LiveStream</a>
   <a href="https://noahmcge.github.io/#">Noah's GitHub</a>
   <a href="service.html">Customer Service</a>
-  <a href="computerparts.html" target = "_blank" Grid Example </a>
+  <a href="computerparts.html" target = "_blank"> computer parts </a>
+  <a href="1000.html" target = "_blank"> $1000 Computer  </a>
 </div>
 <!--Navigation Bar End-->
 
