--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@ body {
   <a href="service.html">Customer Service</a>
   <a href="computerparts.html" target = "_blank"> computer parts </a>
   <a href="1000.html" target = "_blank"> $1000 Computer  </a>
+    <a href="2500.html" target = "_blank"> $2500 Computer  </a>  
 </div>
 <!--Navigation Bar End-->
 
