--- a/1000.html
+++ b/1000.html
@@ -26,7 +26,7 @@ yellow #b58900 orange #cb4b16 red #dc322f
 magenta #d33682 violet #6c71c4 blue #268bd2 cyan #2aa198 green #859900
 -->
 <body>
-<img src = "img/intelasus.png" height = "200px">
+<img src = "img/banner.jpg" height = "200px">
 <div class="container">
  <div>$180 - MB  MSI - X470 GAMING PRO CARBON ATX AM4 Motherboard</div>
 
@@ -46,15 +46,5 @@ magenta #d33682 violet #6c71c4 blue #268bd2 cyan #2aa198 green #859900
  <div>  $824 	- TOTAL WITHOUT TAX</div>
 
 
-
-
-<tt>160+320+270+80+99+70+58+70</tt>
-<br />
-Over $1000 budget from : RAM, M.2 and CPU <br />
-   C COLEMAN <br />All parts from Newegg.com</div>
-
-https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Grids
-
-</div>
 </body>
 </html>
