--- a/2500.html
+++ b/2500.html
@@ -28,22 +28,21 @@ magenta #d33682 violet #6c71c4 blue #268bd2 cyan #2aa198 green #859900
 <body>
 <img src = "img/banner.jpg" height = "200px">
 <div class="container">
- <div>$180 - MB  MSI - X470 GAMING PRO CARBON ATX AM4 Motherboard</div>
+ <div>$350 - MB  350 Asus Motherboard-ROG Maximus Xi Code Atx LGA1151 Motherboard</div>
 
- <div>$150 - CPU  AMD - Ryzen 5 1600 3.2 GHz 6-Core Processor $149.89 </div>
-
+ <div>$369 - CPU  Processor (Intel i7-8700k 6- core) Outlet PC
  <div>$228 -  Harddrve  	Samsung - 970 Evo 1 TB M.2-2280 Solid State Drive</div>
- <div> $43  - WD Blue 1TB Desktop Hard Disk Drive - 7200 RPM SATA 6Gb/s 64MB Cache 3.5 Inch - WD10EZEX </div>
+ <div> $140  - Harddrve  Western Digital - Blue 1 TB 2.5" Solid State Drive Harddrive for data (SATA) </div>
 
- <div>$100 - Power supply Corsair - RMx (2018) 850 W 80+ Gold Certified Fully-Modular ATX Power Supply </div>
+ <div>$126 - Power supply  Power supply. EVGA - Supernova g2 850 W 80+ Gold Certified Fully- Modular ATX Power Supply </div>
 
- <div>$128 RAM - Corsair - Vengeance LPX 16 GB (2 x 8 GB) DDR4-2666 Memory</div>
+ <div>$259 RAM - corsair - RAM Vengeance LPX 16 GB (2 x 8 GB) DDR4-3000 Memory RAM from Amazon </div>
 
- <div>$65 CASE -  	NZXT - H500 (White) ATX Mid Tower Case </div>
+ <div>$169 CASE Thermaltake - View 71 TG RGB ATX Full tower case </div>
 
- <div>$30 - Cooler Master Hyper 212 EVO - CPU Cooler with 120mm PWM Fan  </div>
+ <div>$816 Video card MSI - GeForce RTX 2080 8 GB Duke Video Card  </div>
 
- <div>  $824 	- TOTAL WITHOUT TAX</div>
+ <div>  $2457 	- TOTAL WITHOUT TAX</div>
 
 
 </body>
