--- a/2500.html
+++ b/2500.html
@@ -1,4 +1,4 @@
-<html><head><title> COLEMAN - PARTS - INTEL - ASUS</title>
+<html><head><title> Trey's - PARTS - INTEL - ASUS</title>
 <style>
 body {
   background-color: #839496;
