--- a/1000.html
+++ b/1000.html
@@ -1,4 +1,4 @@
-<html><head><title> COLEMAN - PARTS - INTEL - ASUS</title>
+<html><head><title> Trey Turner - PARTS </title>
 <style>
 body {
   background-color: #839496;
