--- a/2500.html
+++ b/2500.html
@@ -1,49 +1,48 @@
-<html><head><title> Trey's - PARTS - INTEL - ASUS</title>
+<html><head><title> COMPUTER BID Trey Turner </title>
 <style>
-body {
-  background-color: #839496;
-  width: 90%;
-  max-width: 900px;
-  margin: 2em auto;
+body{ margin:0;
+  background-color: #93a1a1 ;
+  color: #000;
   font-family: system-ui, sans-serif;
+  font-size: 14px;
 }
-
-.container > div {
-  border-radius: 5px;
-  padding: 10px;
-  background-color: #fdf6e3;
-  color: #268bd2;
-  border: 1px solid #cb4b16;
+a{
+  color: #fff ;font-size: 14px;background-color: #002b36 ;
+  text-decoration: none;
 }
-.container {
-  display: grid;
-  grid-template-columns: 200px 200px 200px;
+a:hover{
+	background-color: #93a1a1;
+}
+.list {
+position: absolute;
+top: 5%;
+left: 10%;
+font-family: system-ui , sans-serif;
+background-color: #eee8d5;
+color:  #073642 ;
+border: solid 5px;
+border-style: solid;
+border-color: ##2aa198;
+border-radius: 10px;
+padding : 5px;
 }
 </style>
-<!--  base03 #002b36 base02 #073642 base01 #586e75 base00 #657b83
-base0 #839496 base1 #93a1a1 base2 #eee8d5 base3 #fdf6e3
-yellow #b58900 orange #cb4b16 red #dc322f
-magenta #d33682 violet #6c71c4 blue #268bd2 cyan #2aa198 green #859900
--->
+</head>
 <body>
-<img src = "img/banner.jpg" height = "200px">
-<div class="container">
- <div>$350 - MB  350 Asus Motherboard-ROG Maximus Xi Code Atx LGA1151 Motherboard</div>
-
- <div>$369 - CPU  Processor (Intel i7-8700k 6- core) Outlet PC
- <div>$228 -  Harddrve  	Samsung - 970 Evo 1 TB M.2-2280 Solid State Drive</div>
- <div> $140  - Harddrve  Western Digital - Blue 1 TB 2.5" Solid State Drive Harddrive for data (SATA) </div>
-
- <div>$126 - Power supply  Power supply. EVGA - Supernova g2 850 W 80+ Gold Certified Fully- Modular ATX Power Supply </div>
-
- <div>$259 RAM - corsair - RAM Vengeance LPX 16 GB (2 x 8 GB) DDR4-3000 Memory RAM from Amazon </div>
-
- <div>$169 CASE Thermaltake - View 71 TG RGB ATX Full tower case </div>
-
- <div>$816 Video card MSI - GeForce RTX 2080 8 GB Duke Video Card  </div>
-
- <div>  $2457 	- TOTAL WITHOUT TAX</div>
-
-
+<pre><div class = "list">
+COMPUTER BIB - Trey Turner
+$2500 Computer
+$ 350 Asus Motherboard-ROG Maximus Xi Code Atx LGA1151 Motherboard
+$ 369 Processor (Intel i7-8700k 6- core) Outlet PC
+$ 90  Harddrve (SSD, M.2, PCIE or your choice.) Samsung - 850 EVO-Series 250 GB 2.5" Solid state drive
+$140  Western Digital - Blue 1 TB 2.5" Solid State Drive Harddrive for data (SATA)
+$ 126 Power supply. EVGA - Supernova g2 850 W 80+ Gold Certified Fully- Modular ATX Power Supply
+$ corsair - RAM Vengeance LPX 16 GB (2 x 8 GB) DDR4-3000 Memory RAM (16GB minimum)
+$ 169 CASE Thermaltake - View 71 TG RGB ATX Full tower case
+$ 816 Video card MSI - GeForce RTX 2080 8 GB Duke Video Card
+$2299.14 TOTAL WITHOUT TAX
+LIST WHERE PARTS WHERE PURCHASED:pcoutlet,newegg,amazon from pc partpicker
+</div>
+</pre>
 </body>
 </html>
