--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@ body {
   <a href="service.html">Customer Service</a>
   <a href="computerparts.html" target = "_blank"> computer parts </a>
   <a href="1000.html" target = "_blank"> $1000 Computer  </a>
-    <a href="2500.html" target = "_blank"> $2500 Computer  </a>  
+  <a href="2500.html" target = "_blank"> $2500 Computer  </a>
+  <a href="2500.html" target = "_blank"> Testing Server  </a> 
 </div>
 <!--Navigation Bar End-->
 
