--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ body {
   <a href="computerparts.html" target = "_blank"> computer parts </a>
   <a href="1000.html" target = "_blank"> $1000 Computer  </a>
   <a href="2500.html" target = "_blank"> $2500 Computer  </a>
-  <a href="2500.html" target = "_blank"> Testing Server  </a> 
+  <a href="test.html" target = "_blank"> Testing Server  </a> 
 </div>
 <!--Navigation Bar End-->
 
