--- a/index.html
+++ b/index.html
@@ -5,6 +5,5 @@
 
 
 </body>
- background-image: url("https://i.ytimg.com/vi/BWxMuQre3R8/maxresdefault.jpg")
-
+<body background="https://i.ytimg.com/vi/BWxMuQre3R8/maxresdefault.jpg">
 </html>
