--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<center><title>TCG Website</title></center>
-<h1> TCG </h1>
+<title>TCG Website</title></center>
+<center><h6> Welcome TCG Army </h6></center>
 
 
 </body>
