--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <title>TCG Website</title></center>
-<center><h6> Welcome TCG Army </h6></center>
+<center><h1> Welcome TCG Army </h1></center>
 
 
 </body>
-<body background="https://i.ytimg.com/vi/BWxMuQre3R8/maxresdefault.jpg">
+<body background="trusting-the-universe2.jpg">
 </html>
