--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <title>TCG Website</title></center>
 <center><h1> Welcome TCG Army </h1></center>
-
-
+<body>
+<img src="trusting-the-universe2.jpg width="300" height="400">
 </body>
-<img src="maxresdefault.jpg"
 </html>
