--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>TCG Website</title></center>
 <center><h1> Welcome TCG Army </h1></center>
 <body>
-<img src="/img/trusting-the-universe2.jpg" width="100%" height="1250%">
+<img src="/img/1200px-International_Morse_Code.svg.png" width="100%" height="1250%">
 </body>
 </html>
