--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>TCG Website</title></center>
+<title>Test Server</title></center>
 <center><h1> Welcome TCG Army </h1></center>
 <body>
 <img src="/img/1200px-International_Morse_Code.svg.png" width="100%" height="1250%">
