--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <title>Test Server</title></center>
 <center><h1> Test Server </h1></center>
 <body>
-<img src="/img/1200px-International_Morse_Code.svg.png" width="100%" height="1250%">
+margin-top: 100px;
+margin-bottom: 100px;
+margin-right: 150px;
+margin-left: 80px;
+<img src="x-special/nautilus-clipboard/Firefox_wallpaper.png
+" width="100%" height="1250%">
 </body>
 </html>
