--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
 <title>Test Server</title></center>
 <center><h1> Test Server </h1></center>
 <body>
+<style>
+.parallax { 
+  /* The image used */
+  background-image: url("img_parallax.jpg");
+
+  /* Set a specific height */
+  height: 500px; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
+
+<!-- Container element -->
+<div class="parallax"></div>
 <i class="fas fa-cloud" style="font-size:24px;"></i>
 margin-top: 100px;
 margin-bottom: 100px;
