--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <title>Test Server</title></center>
 <center><h1> Test Server </h1></center>
 <body>
+ margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 80px;
 <style>
 .parallax { 
   /* The image used */
