--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 <title>Test Server</title></center>
 <center><h1> Test Server </h1></center>
 <body>
+ <!-- A grey horizontal navbar that becomes vertical on small screens -->
+<nav class="navbar navbar-expand-sm bg-light">
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link 1</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link 2</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link 3</a>
+    </li>
+  </ul>
+
+</nav>
  {
  margin-top: 100px;
   margin-bottom: 100px;
