--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
 .parallax { 
   /* The image used */
-  background-image: url("img_parallax.jpg");
+  background-image: url("Dragon-Ball-Super-625x352.jpg");
 
   /* Set a specific height */
   height: 500px; 
