--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   background-image: url("Dragon-Ball-Super-625x352.jpg");
 
   /* Set a specific height */
-  height: 500px; 
+  height: auto; 
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
