--- a/index.html
+++ b/index.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html>
-<style>
-.parallax { 
-  /* The image used */
-  background-image: url("Dragon-Ball-Super-625x352.jpg");
+<body>
+<img src="goku.jpg">
 
-  /* Set a specific height */
-  height: auto; 
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-</style>
 
  
 
