--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src = img/goku.jpg height = 800 px alt = goku>
+<img src = img/Goku.jpg height = 800 px alt = goku>
 
 
  
