--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src = img/Goku.jpg height = 800 px alt = goku>
-
+ <h1> Goku is the best </h1>
+  <img src = img/Goku.jpg height = 800 px alt = goku>
+ </body>
+</html>
 
  
 
