--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <img src="http://i3.ytimg.com/vi/hCr4XKf3Dsk/maxresdefault.jpg"
+style="width:1024px;height:768px;">
  </body>
 </html>
 
