--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
+{
+    box-sizing: border-box;
+}
 <img src="http://i3.ytimg.com/vi/hCr4XKf3Dsk/maxresdefault.jpg"
 style="width:2200px;height:768px;">
  </body>
