--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-{
-    box-sizing: border-box;
-}
 <img src="http://i3.ytimg.com/vi/hCr4XKf3Dsk/maxresdefault.jpg"
-style="width:1900px;height:768px;">
+background-size:cover;
  </body>
 </html>
 
