--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+<ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
 <img src="http://i3.ytimg.com/vi/hCr4XKf3Dsk/maxresdefault.jpg"
-background-size:cover;
+background-size: cover;
  </body>
 </html>
 
