--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <li><a href="news.asp">News</a></li>
   <li><a href="contact.asp">Contact</a></li>
   <li><a href="about.asp">About</a></li>
+  li {
+  display: inline;
+}
 </ul>
 <img src="http://i3.ytimg.com/vi/hCr4XKf3Dsk/maxresdefault.jpg"
 background-size: cover;
