--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 <body>
 <ul>
-  <li><a href="default.asp">Home</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
-  li {
-  display: inline;
+li {
+  float: left;
+}
+
+a {
+  display: block;
+  padding: 8px;
+  background-color: #160808;
+}
+
 }
 </ul>
 <img src="http://i3.ytimg.com/vi/hCr4XKf3Dsk/maxresdefault.jpg"
