--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style>
 <ul>
 li {
   float: left;
@@ -10,10 +11,11 @@ a {
   display: block;
   padding: 8px;
   background-color: #160808;
-}
+
 
 }
 </ul>
+</style>
 <img src="http://i3.ytimg.com/vi/hCr4XKf3Dsk/maxresdefault.jpg"
 background-size: cover;
  </body>
