--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ a {
 }
 </ul>
 </style>
-<img src="http://i3.ytimg.com/vi/hCr4XKf3Dsk/maxresdefault.jpg"
+<img src="https://images5.alphacoders.com/330/thumb-1920-330731.jpg"
 background-size: cover;
  </body>
 </html>
