--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </style>
 <img src="https://images5.alphacoders.com/330/thumb-1920-330731.jpg"
 background-size: cover;
+id="bod" onload="backgr()" style="height: 2500px;">
  </body>
 </html>
 
