--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
 <style>
 </style>
-<img src="https://images5.alphacoders.com/330/thumb-1920-330731.jpg"
+</head>
+<body>
+<img src="Logo.png"
 background-size: cover;
 </body>
 </html>
+
 
  
 
