--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 </style>
 </head>
 <body>
-<img src="Logo.png"
+<img src="/home/trey/Pictures/Logo.png"
 background-size: cover;
 </body>
 </html>
+ 
 
 
  
