--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </style>
 </head>
 <body>
-<img src="/home/trey/Pictures/Logo.png"
+<img src="file:///home/trey/Pictures/Firefox_wallpaper.png"
 background-size: cover;
 </body>
 </html>
