--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 </style>
 </head>
 <body>
-<img src="/Firefox_wallpaper.png"
+<img src="Firefox_wallpaper.png"
 background-size: cover;
 </body>
 </html>
  
+
 
 
  
