--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </style>
 </head>
 <body>
-<img src="Firefox_wallpaper.png"
-background-size: cover;
+<img src = "img/Treylogo.png">
 </body>
 </html>
  
