--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </style>
 </head>
 <body>
-<img src = "img/Treylogo.png" heigh="500px">
+<img src = "img/Treylogo.png" height="500px">
 </body>
 </html>
  
