--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </style>
 </head>
 <body>
+ background-size: 100% 100%;
+  <div>
 <img src = "img/Treylogo.png" height="500px">
+  </div>
 </body>
 </html>
  
