--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 </style>
 </head>
 <body>
- background-size: 100% 100%;
   <div>
-<img src = "img/Treylogo.png" height="500px">
+{
+  background: ("img/Treylogo.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
   </div>
 </body>
 </html>
