--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 </head>
 <body>
   <div>
-{
-  background: ("img/Treylogo.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
+<img src = "img/Treylogo.png" height="100%" width="100%">
   </div>
 </body>
 </html>
