--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p.a {
 </head>
 <body>
   <div>
-<img src = "img/Treylogo.png" height="80%" width="80%">
+    <center><img src = "img/Treylogo.png" height="80%" width="80%"></center>
   </div>
 </body>
 </html>
