--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 p.a {
-<center><title>Cyber Secutiry</title></center>
+<center><title>Cyber Security</title></center>
   font-family: "Times New Roman"
 }
 
