--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<button type="button" class="btn btn-primary">Apple</button>
+<button type="button" class="btn btn-primary">Samsung</button>
+<button type="button" class="btn btn-primary">Sony</button>
 <style>
 </style>
 </head>
 <body>
 <center><title>Cyber Security</title></center>
   <div>
+<button type="button" class="btn btn-primary">Apple</button>
+<button type="button" class="btn btn-primary">Samsung</button>
+<button type="button" class="btn btn-primary">Sony</button>
     <center><img src = "img/Treylogo.png" height="60%" width="80%"></center>
   </div>
 </body>
