--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<ul class="tab 1">
-  <li class="tab 2">
-  <a class="nav-link active" href="#">Active</a>
+<ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link 1</a>
+    </li>
 <style>
 </style>
 </head>
