--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link 1</a>
-    </li>
+    <ul>class="https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp"></ul>
+    
+
+
 <style>
 </style>
 </head>
