--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <ul>class="https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp"></ul>
+    <ul>class=href"https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp">href</ul>
     
 
 
