--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<ul class="navbar-nav">
-    
-
-
+    .navbar { <ul>https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp </ul>
+    element with class="navbar-nav"
+}
 <style>
 </style>
 </head>
