--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    .navbar { <ul>https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp </ul>
-    element with class="navbar-nav"
-}
+.navbar
+<ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">tab1 1</a>
+    </li>
+<ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">tab2</a>
+    </li>
+<ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">tab3</a>
+    </li>
+
 <style>
 </style>
 </head>
