--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 .navbar
 <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">tab1 1</a>
+      <a class="nav-link" href="#">https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp</a>
     </li>
 <ul class="navbar-nav">
     <li class="nav-item">
