--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-.navbar
 <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp</a>
+    <li class=".navbar">
+      <a class="nav-link" href="#">tab1</a>
     </li>
 <ul class="navbar-nav">
     <li class="nav-item">
