--- a/index.html
+++ b/index.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<ul class="navbar-nav">
-    <li class=".navbar">
-      <a class="nav-link" href="#">tab1</a>
-    </li>
-<ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">tab2</a>
-    </li>
-<ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">tab3</a>
-    </li>
-
+<a href="projects.html">Noah</a>
 <style>
 </style>
 </head>
