--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<a href="projects.html">Noah</a>
+<a href="https://www.w3schools.com/tags/tag_a.asp">Noah</a>
 <style>
 </style>
 </head>
