--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <center><title>Cyber Security</title></center>
-  <div>
+  <div
     <center><img src = "img/Treylogo.png" height="60%" width="80%"></center>
   </div>
 </body>
