--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<a href="https://www.w3schools.com/tags/tag_a.asp">Noah</a>
+<a href="https://www.callofduty.com/modernwarfare/preorder">Modernwarfare</a>
+<a href="https://www.epicgames.com/fortnite/en-US/home">Fortnite</a>
+<a href="https://www.bungie.net/">Destiny 2</a>
+<a href="http://tritechsc.org/">TriTech-Cyber</a> 
 <style>
 </style>
 </head>
