--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </style>
 </head>
 <body>
+{
+  background-color: black;
+}
 <center><title>Cyber Security</title></center>
   <div
     <center><img src = "img/Treylogo.png" height="60%" width="80%"></center>
