--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <style>
 </style>
 </head>
-<body>
-{
-  background-color: black;
+<body>{
+  background-color: red;
 }
+
+
 <center><title>Cyber Security</title></center>
   <div
     <center><img src = "img/Treylogo.png" height="60%" width="80%"></center>
