--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <style>
 </style>
 </head>
-<body>{
-  background-color: red;
+<body>
+{
+  background-image: ("/clip-404425-space-galaxy-stars-background");
 }
+  
 
 
 <center><title>Cyber Security</title></center>
