--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:hover{
   top:110px;
   left:10%;
 }
-<i class="img/treylogo.png" style="font-size:60px;"></i>
+<link rel="stylesheet" href="img/treylogo.png">
 </style>
 </head>
 <body>
