--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ a:hover{
   left:10%;
 }
 <link rel="stylesheet" href="img/treylogo.png">
+<i class="material-icons">img/treylogo.png</i>
 </style>
 </head>
 <body>
